# pairings_in_c

./: .gitignore  .travis.yml  LICENSE.COMMERCIAL.txt  README.md
doc/doxygen/: dir_0af1587c8378955de40f48b4bd1869f0.html  dir_0af1587c8378955de40f48b4bd1869f0.js  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  dir_44cec6e3ea30e076b9313c4641539d9f.html  dir_44cec6e3ea30e076b9313c4641539d9f.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_70d5e250c66d001b18da37689179cade.html  dir_70d5e250c66d001b18da37689179cade.js  dir_81ff9cf00c749aad2228acad00958fb4.html  dir_81ff9cf00c749aad2228acad00958fb4.js  dir_85c2674633429fd2e8d77b3eeeec62a5.html  dir_85c2674633429fd2e8d77b3eeeec62a5.js  dir_98dc676d8acdad294807b7a3b7ca6127.html  dir_98dc676d8acdad294807b7a3b7ca6127.js  dir_aaf04eac32e2d969d4d4c557602e1b81.html  dir_aaf04eac32e2d969d4d4c557602e1b81.js  dir_b4dde7106509c83e4d76c0211ba4bb55.html  dir_b4dde7106509c83e4d76c0211ba4bb55.js  dir_b6c2a257bfab6380ca9b3cb94b12cb25.html  dir_b6c2a257bfab6380ca9b3cb94b12cb25.js  dir_ce3ecb5bf2acc551f71c9ccde95056cd.html  dir_ce3ecb5bf2acc551f71c9ccde95056cd.js  dir_e8ca33697ef68adb7b6eb1f8070223fd.html  dir_e8ca33697ef68adb7b6eb1f8070223fd.js  dir_f0cefe75261312651845e38c356d2d76.html  dir_f0cefe75261312651845e38c356d2d76.js  dir_f3d9738123d3c6e9073b3f340884449f.html  dir_f3d9738123d3c6e9073b3f340884449f.js  files.html  files.js  globals.html  globals_a.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_dup.js  globals_e.html  (+38 more)
docu/: parings.Doxyfile  parings.Doxyfile~
docu/html/: CMakeCCompilerId_8c.html  CMakeCCompilerId_8c_source.html  Keccak-compact-settings_8h.html  Keccak-compact-settings_8h_source.html  Keccak-compact_8c.html  Keccak-compact_8c_source.html  Keccak-compact_8h.html  Keccak-compact_8h_source.html  all__in__one__demo_8c.html  all__in__one__demo_8c_source.html  annotated.html  arch_2cortexm0_2bi_8h.html  arch_2cortexm0_2bi_8h_source.html  arch_2cortexm0_2fp_8h.html  arch_2cortexm0_2fp_8h_source.html  arch_8h.html  arch_8h_source.html  assert_8c.html  assert_8c_source.html  assert_8h.html  assert_8h_source.html  bbkem_8c.html  bbkem_8c_source.html  bbkem_8h.html  bbkem_8h_source.html  bbkem__param_8c.html  bbkem__param_8c_source.html  bench_8c.html  (+265 more)
framework/: .cproject  .project  CMakeLists.txt  LICENSE.COMMERCIAL.txt  generateMultiply.py  generate_dump.sh  template.doxy.in
framework/benchmark/: bench.c
framework/cmake/: clangformat.cmake  cmake_uninstall.cmake.in  doxygenSupport.cmake  executeCoverageTest.cmake  forceOutOfSourceBuild.cmake  installSupport.cmake  messages.cmake  setDefaultSettings.cmake  testCoverage.cmake  testing.cmake  versionSupport.cmake
framework/cmake/scripts/: llvm-gcov.sh  llvm-gcov.sh.in  run.cmake  target-config.cmake.in
framework/cmake/toolchain/: arm-none-eabi-gcc.cmake
framework/demo/: all_in_one_demo.c  gss_hwang_demo.c  ibe_demo.c  pairing_demo.c  sdh_zk_demo.c
framework/include/: arch.h  assert.h  bench_util.h  config.h  param.h  rand.h  types.h  util.h
framework/include/aes/: aes.h  aes128_dec.h  aes128_enc.h  aes_cbc.h  aes_dec.h  aes_enc.h  aes_keyschedule.h  aes_types.h
framework/include/arch/cortexm0/: bi.h  fp.h
framework/include/bigint/: bi.h  bi_cortexm0.h  bi_std.h
framework/include/ec/: ec.h  ecfp2_std.h  ecfp_std.h
framework/include/fp/: fp.h  fp12.h  fp12_std.h  fp2.h  fp2_std.h  fp4.h  fp4_std.h  fp_cortexm0.h  fp_std.h
framework/include/gss/: gss_hwang.h
framework/include/hash/: hash_function.h  hashing.h  sha1.h
framework/include/ibe/: bbkem.h
framework/include/pbc/: pbc.h  pbc_bn_std.h
framework/include/sdh/: sdh_zk.h
framework/linker/: cortexm0.ld
framework/scripts/: generateMultiplyCaching.py  generateMultiplyKaratsuba.py  generateMultiplyKaratsubaFull.py  generate_dump.sh
framework/src/: assert.c  bench_util.c  param.c  rand.c  util.c
framework/src/aes/: aes128_dec.c  aes128_enc.c  aes_cbc.c  aes_dec.c  aes_enc.c  aes_keyschedule.c  memxor.c
framework/src/arch/cortexm0/asm/: bi_compare.S  bi_copy_160.S  bi_shift_right.S  bi_subtract_160.S  bi_subtract_dbl_len.S  bi_subtract_dbl_len_160.S  fp_add_160.S  fp_multiply_monty.S  fp_multiply_monty_bn254.S  fp_multiply_monty_mulacc.S  fp_multiply_monty_mulacc_160.S  fp_neg.S  fp_neg_160.S  fp_rdc_256.S  fp_rdc_bn254.S  fp_rdc_monty_160.S  fp_rdc_monty_256.S  fp_rdc_monty_mulacc_256.S
framework/src/base/std/bigint/: bi.c  bi_const.c
framework/src/base/std/ec/: ecfp.c  ecfp2.c
framework/src/base/std/fp/: fp.c  fp12.c  fp2.c  fp4.c
framework/src/base/std/pbc/: pbc_bn.c
framework/src/cortexm0/: startup.c
framework/src/cortexm0/asm/: bi_add.S  bi_add_160.S  bi_clear.S  bi_clear_160.S  bi_compare.S  bi_compare_160.S  bi_compare_nc.S  bi_compare_nc_160.S  bi_copy.S  bi_copy_160.S  bi_multiply_160.S  bi_multiply_256.S  bi_multiply_256_16bit.S  bi_multiply_256_16bit_caching.S  bi_multiply_256_16bit_simple.S  bi_multiply_256_karatsuba.S  bi_multiply_256_opt.S  bi_multiply_mulacc.S  bi_multiply_mulacc_160.S  bi_multiply_mulacc_hybrid.S  bi_multiply_var.S  bi_shift_left.S  bi_shift_left_160.S  bi_shift_right.S  bi_shift_right_160.S  bi_square_mulacc.S  bi_subtract.S  bi_subtract_160.S  bi_subtract_dbl_len.S  bi_subtract_dbl_len_160.S  fp_add.S  fp_add_160.S  fp_hlv.S  fp_hlv_160.S  fp_multiply_monty.S  fp_multiply_monty_160.S  fp_multiply_monty_bn254.S  fp_multiply_monty_mulacc.S  fp_multiply_monty_mulacc_160.S  fp_neg.S  (+12 more)
framework/src/cortexm0/asm/lazy/: fp_add_lazy_bn254.S  fp_multiply_monty_lazy_bn254.S  fp_neg_lazy_bn254.S  fp_subtract_lazy_bn254.S
framework/src/gss/: gss_hwang.c  sdh_zk.c
framework/src/hash/: Keccak-compact.c  hashing.c  sha1.c  sha256.c  sha2_small_common.c
framework/src/ibe/: bbkem.c  bbkem_param.c
framework/src/sdh/: sdh_zk.c
framework/test/: ecfp2_hdl.c  ecfp_hdl.c  experiment.c  fp_hdl.c  test_aes.c  test_bbkem.c  test_bigint.c  test_ecfp.c  test_ecfp2.c  test_fp.c  test_fp12.c  test_fp2.c  test_fp4.c  test_optate_pairing.c  test_sha.c  test_sha256.c
(+385 files in other folders)
